# CSoundPlusPlus

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sbt  requirements.txt
project/: plugins.sbt
resources/csound/: preamble.csd
resources/examples/: bass-demo.csp  bass-demo.orc  compression.csp  demo.csp  demo.swav  features.csp  fm.csp  major.mid  major_bass.mid  multiplexers.csp  parallel.csp  pentatonic.mid  sine.swav
resources/lib/: standard.csp
resources/test/: library.swav
src/main/c/csoundpp/: CMakeLists.txt
src/main/c/csoundpp/opcodes/: average.c  average.h  channel.c  channel.h  mixing.c  opcodes.c  opcodes.h
src/main/c/soundwave/: CMakeLists.txt
src/main/c/soundwave/opcodes/: channel.h  mixing.c  mixing.h  opcodes.c  opcodes.h
src/main/python/csoundpp/: analysis.py  errors.py  files.py  lang.py  midi.py  player.py
src/main/python/soundwave/: analysis.py  errors.py  files.py  lang.py  player.py
src/main/scala/common/: OrderedMap.scala
src/main/scala/csoundpp/: Compiler.scala  Cspp.scala  Player.scala
src/main/scala/csoundpp/csound/: Minify.scala
src/main/scala/csoundpp/errors/: Errors.scala
src/main/scala/csoundpp/files/: FileReader.scala  FileWriter.scala
src/main/scala/csoundpp/ir/: Absyn.scala  Optimizer.scala  Typecheck.scala
src/main/scala/csoundpp/parser/: FileReader.scala  Lexer.scala  Parser.scala  Tokens.scala
src/main/scala/csoundpp/translate/: Allocator.scala  SignalDag.scala  Translate.scala
src/main/scala/soundwave/: Compiler.scala  Player.scala  Soundwave.scala
src/main/scala/soundwave/csound/: Minify.scala
src/main/scala/soundwave/errors/: Errors.scala
src/main/scala/soundwave/files/: FileReader.scala  FileWriter.scala
src/main/scala/soundwave/ir/: Absyn.scala  Optimizer.scala  Typecheck.scala
src/main/scala/soundwave/parser/: Lexer.scala  Parser.scala  Tokens.scala
src/main/scala/soundwave/semantics/: Primitives.scala
src/main/scala/soundwave/translate/: Allocator.scala  Translate.scala
src/test/python/csoundpp/: test_primitives.py
src/test/python/soundwave/: test_primitives.py
src/test/scala/common/: HashListTest.scala
src/test/scala/csoundpp/ir/: OptimizerTest.scala  TypecheckTest.scala
src/test/scala/csoundpp/parser/: LexerTest.scala  ParserTest.scala
src/test/scala/csoundpp/translate/: DagTest.scala  LetResolverTest.scala  TranslateTest.scala
src/test/scala/soundwave/ir/: OptimizerTest.scala  TypecheckTest.scala
src/test/scala/soundwave/parser/: LexerTest.scala  ParserTest.scala
src/test/scala/soundwave/semantics/: PrimitivesTest.scala
src/test/scala/soundwave/translate/: DagTest.scala  LetResolverTest.scala  TranslateTest.scala
